application/k8s/base/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: hello
  name: hello
spec:
  replicas: 1
  selector:
    matchLabels:
      app: hello
  strategy:
    type: RollingUpdate
  template:
    metadata:
      labels:
        app: hello
    spec:
      containers:
      - image: image-registry.openshift-image-registry.svc:5000/hello-dev/hello:latest
        imagePullPolicy: Always
        name: hello
        ports:        
        - containerPort: 8080
        resources:
          limits:
            memory: 256Mi
            cpu: 200m
          requests:
            memory: 256Mi
            cpu: 200m
