application/k8s/base/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: hello
  labels:
    app: hello
spec:
  ports:
  - port: 8080
    protocol: TCP
  selector:
    app: hello
