application/k8s/base/route.yaml
apiVersion: v1
kind: Route
metadata:
  labels:
    app: hello
  name: hello
spec:
  to:
    kind: Service
    name: hello
